@@ -5,7 +5,6 @@ import com.azure.storage.queue.QueueAsyncClient;
 import it.pagopa.ecommerce.commons.documents.TransactionActivatedData;
 import it.pagopa.ecommerce.commons.documents.TransactionActivatedEvent;
 import it.pagopa.ecommerce.commons.domain.NoticeCode;
-import it.pagopa.ecommerce.commons.domain.PaymentToken;
 import it.pagopa.ecommerce.commons.domain.TransactionActivationRequested;
 import it.pagopa.ecommerce.commons.generated.server.model.TransactionStatusDto;
 import it.pagopa.ecommerce.commons.repositories.PaymentRequestInfo;
@@ -23,9 +22,7 @@ import org.springframework.stereotype.Component;
 import reactor.core.publisher.Mono;
 
 import java.time.Duration;
-import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @Slf4j
@@ -121,10 +118,6 @@ public class TransactionActivateResultHandler
                 if(noticeCode.isEmpty()) {
                     throw new RuntimeException();
                 }
-                /*noticeCode.ifPresent(noticeCode1 -> {
-                    transactionActivationRequested.getNoticeCodes().remove(noticeCode);
-                    transactionActivationRequested.getNoticeCodes().add(new NoticeCode(new PaymentToken(saved.paymentToken()),noticeCode1.rptId(),noticeCode1.transactionAmount(),noticeCode1.transactionDescription()));
-                });*/
 
                 TransactionActivatedData data =new TransactionActivatedData(
                         transactionActivationRequested.getEmail().value(),
@@ -135,7 +128,7 @@ public class TransactionActivateResultHandler
                                                 noticeCode2.rptId().value(),
                                                 noticeCode2.transactionDescription().value(),
                                                 noticeCode2.transactionAmount().value()))
-                                .collect(Collectors.toList()),
+                                .toList(),
                         null,
                         null);
 
@@ -149,7 +142,7 @@ public class TransactionActivateResultHandler
                                   noticeCode2.rptId().value(),
                                   noticeCode2.transactionDescription().value(),
                                   noticeCode2.transactionAmount().value()))
-                          .collect(Collectors.toList()),
+                          .toList(),
                       data);
 
               log.info("Saving TransactionActivatedEvent {}", transactionActivatedEvent);
